--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,10 @@
+@import "./variables.scss";
+
 .App {
   text-align: center;
+  & > .container{
+      max-width: 1110px;
+  }
 }
 
 .App-logo {
@@ -29,10 +34,6 @@
 
 
 //app ML
-$amarillo:#ffe600;
-$gris1:#333333;
-$gris2:#999999;
-$gris3:#eeeeee;
 body{
     background: $gris3
 }
@@ -40,6 +41,10 @@ body{
 .navbar{
     background: $amarillo;
     margin-bottom: 20px;
+    .container{
+        max-width: 1110px;
+        padding: 0;
+    }
     .navbar-brand{
         overflow: hidden;
         text-indent: -999px;
@@ -65,75 +70,30 @@ body{
                 text-indent: -999px;
                 background: url(assets/ic_Search.png) no-repeat $gris3 center;
                 width: 46px;
+                &:focus,&:active{
+                    border: none;
+                    outline: none;
+                    box-shadow: none;
+                }
             }
         }
     }
 }
 
-//list-items
-.list-items{
-    margin-bottom: 20px;
-    display: block;
-    border-radius: 5px;
-    overflow: hidden;
-    .item{
-        background: #fff;
-        padding: 15px 0;
-        &:after{
-            content:"";
-            width: calc(100% - 30px);
-            height: 1px;
-            background: $gris3;
-            display: block;
-            transform: translate(15px,15px);
-        }
-        span{
-            clear: both;
-            display: block;
-            text-align: left;
-        }
-        .zone{
-            text-align: right;
-            font-size: 14px;
-            color: $gris2;
-            margin-right: 5%;
-        }
-        .price{
-            margin-top: 15px;
-            font-size: 30px;
-        }
-        .title{
-            text-align: left;
-            font-size: 25px;
-            max-width: 60%;
-            a{
-                line-height: 1.2em;
-            }
-        }
-        img{
-            border-radius: 5px;
-            width: 100%;
-            height: auto;
-        }
-        .free-shipping{
-            text-indent: -999px;
-            position: relative;
-            background: url(assets/ic_shipping.png) no-repeat center;
-            width: 20px;
-            height: auto;
-            display: inline-block;
-            margin-left: 15px;
-        }
-    }
-}
 
 //categories
 .categories{
     color: $gris2;
     margin-bottom: 20px;
-    span+span:before{
-        content: ">";
-        margin: 0 10px;
-        color:$gris2;
+    span{
+        &:last-of-type{
+            font-weight: 700;
+        }
+        &+span:before{
+            content: ">";
+            margin: 0 10px;
+            color:$gris2;
+        }
     }
+
 }
